<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/capture"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/star_filled"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/button_checked"
            android:title="@string/settings" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_blocker"
            android:icon="@drawable/intercept"
            android:title="@string/menu_blocker" />

        <item
            android:id="@+id/nav_intercept"
            android:icon="@drawable/intercept"
            android:title="@string/menu_intercept" />

        <item
            android:id="@+id/nav_disabled"
            android:icon="@drawable/disabled"
            android:title="@string/disabled" />

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/gallery"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/help"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/settings"
            android:title="@string/setup" />

        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/slideshow"
            android:title="@string/menu_me" />
    </group>

</menu>