<?xml version="1.0" encoding="utf-8"?><!-- navigation/mobile_navigation.xml-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fourtwo.hookintent.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.fourtwo.hookintent.ui.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" />

    <!-- Other fragments -->
    <fragment
        android:id="@+id/nav_star"
        android:name="com.fourtwo.hookintent.ui.star.StarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_star">
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.fourtwo.hookintent.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_me"
        android:name="com.fourtwo.hookintent.ui.me.MeFragment"
        android:label="@string/menu_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.fourtwo.hookintent.ui.filter.FilterFragment"
        android:label="@string/filter"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.fourtwo.hookintent.ui.setup.SetupFragment"
        android:label="@string/setup"
        tools:layout="@layout/fragment_select" />

    <fragment
        android:id="@+id/nav_blocker"
        android:name="com.fourtwo.hookintent.ui.blocker.BlockerFragment"
        android:label="@string/menu_blocker"
        tools:layout="@layout/fragment_blocker" />

    <fragment
        android:id="@+id/nav_select"
        android:name="com.fourtwo.hookintent.ui.select.SelectFragment"
        tools:layout="@layout/fragment_select" />

    <activity
        android:id="@+id/nav_intercept"
        android:name="com.fourtwo.hookintent.IntentIntercept"
        tools:layout="@layout/activity_intent_intercept" />

    <activity
        android:id="@+id/nav_disabled"
        android:name="com.fourtwo.hookintent.DisabledActivity"
        tools:layout="@layout/activity_disabled" />


</navigation>
