<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/item_background"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/cloud_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cloud_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cloud_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cloud_remark"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/cloud_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cloud_summary"
        android:textSize="12sp" />

</LinearLayout>